Fix header alignment

--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -14,6 +14,9 @@
 @media only screen and (min-width: 600px) {
   .hero {
     height: 200px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   }
 }
 
